fix line cutting off on big screens

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -89,11 +89,11 @@
     position: absolute;
     content: "";
     width: 100%;
-    height: 14px;
+    height: 20px;
     background-image: url("../../assets/lines/Line1-green.svg");
     background-repeat: no-repeat;
     background-size: 100%;
-    bottom: -14px;
+    bottom: -20px;
     left: 0;
 
     @include for-phone-only {
